# cxform2

./: CMakeLists.txt  README.md
include/: cxform.h
src/: cxform-auto.c  cxform-manual.c  main-cli.c
tests/: test_results.txt
